// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Avatar Default 1`] = `
<div
  className="h-10 w-10 overflow-hidden rounded-full bg-coolGray-200 dark:bg-trueGray-800 border border-coolGray-300 dark:border-trueGray-700"
>
  <img
    alt="avatar"
    src="https://source.unsplash.com/random"
  />
</div>
`;

exports[`Storyshots Avatar Duo 1`] = `
<div
  className="h-10 w-10 overflow-hidden rounded-full bg-coolGray-200 dark:bg-trueGray-800 border border-coolGray-300 dark:border-trueGray-700"
>
  <div
    aria-label="avatar"
    className="flex h-full w-full"
    role="img"
  >
    <img
      alt=""
      className="-translate-x-1/2 w-1/2 h-full object-cover"
      src="https://source.unsplash.com/random"
    />
    <img
      alt=""
      className="translate-x-1/2 w-1/2 h-full object-cover"
      src="https://source.unsplash.com/random"
    />
  </div>
</div>
`;

exports[`Storyshots Avatar Pending 1`] = `
<div
  className="h-10 w-10 overflow-hidden rounded-full bg-coolGray-200 dark:bg-trueGray-800 animate-pulse"
/>
`;

exports[`Storyshots Avatar Quartet 1`] = `
<div
  className="h-10 w-10 overflow-hidden rounded-full bg-coolGray-200 dark:bg-trueGray-800 border border-coolGray-300 dark:border-trueGray-700"
>
  <div
    aria-label="avatar"
    className="flex w-full h-full flex-wrap"
    role="img"
  >
    <img
      alt=""
      className="w-1/2 h-1/2 object-cover"
      src="https://source.unsplash.com/random"
    />
    <img
      alt=""
      className="translate-y-1/2 w-1/2 h-1/2 object-cover"
      src="https://source.unsplash.com/random"
    />
    <img
      alt=""
      className="-translate-x-1/2 translate-y-1/2 w-1/2 h-1/2 object-cover"
      src="https://source.unsplash.com/random"
    />
    <img
      alt=""
      className="translate-x-1/2 translate-y-1/2 w-1/2 h-1/2 object-cover"
      src="https://source.unsplash.com/random"
    />
  </div>
</div>
`;

exports[`Storyshots Avatar Trio 1`] = `
<div
  className="h-10 w-10 overflow-hidden rounded-full bg-coolGray-200 dark:bg-trueGray-800 border border-coolGray-300 dark:border-trueGray-700"
>
  <div
    aria-label="avatar"
    className="flex flex-wrap h-full w-full"
    role="img"
  >
    <img
      alt=""
      className="w-full h-1/2 object-cover"
      src="https://source.unsplash.com/random"
    />
    <img
      alt=""
      className="-translate-x-1/2 translate-y-1/2 w-1/2 h-1/2 object-cover"
      src="https://source.unsplash.com/random"
    />
    <img
      alt=""
      className="translate-x-1/2 translate-y-1/2 w-1/2 h-1/2 object-cover"
      src="https://source.unsplash.com/random"
    />
  </div>
</div>
`;
